# pay-api

./: .env.example  .gitignore  LICENSE  README.en-US.md  README.md  README.pt-BR.md  alembic.ini  pyproject.toml  requirements.txt  start.sh
app/: main.py
app/api/: routes.py
app/api/api_v1/: auth.py  boleto_bb.py  boletos_bb.py  contas_bancarias.py  convenios_bancarios.py  enums.py  permissions.py  profile.py  roles.py  tenants.py  users.py  utils.py
app/api/dependencies/: areas.py  auth.py  boletos_bb.py  contas_bancarias.py  convenios_bancarios.py  database.py  profile.py  redis_database.py  security.py  tenant.py  users.py
app/core/: config.py  exception_handle.py  exception_handle_translate.py  log_config.py  tasks.py
app/core/exceptions/: exceptions_customs.py
app/core/pydantic_i18n_lang/: pt_BR.json
app/core/translator_i18n/: __init__.py  main.py
app/core/translator_i18n/languages/: en_US.json  pt_BR.json
app/db/: database.py  redis_database.py
app/db/migrations/: base.py  env.py
app/db/migrations/versions/: 080f9dc5f5ac_create_convenios_bancarios_table.py  5c54e2c08763_create_contas_bancarias_table.py  7139ccb5c56c_create_main_tables.py  7b673a382e5b_create_pagadores_bb_table.py  90b50578e4e8_create_beneficiarios_bb_table.py  9f9c53000651_create_qr_codes_bb_table.py  e9254a3fd852_create_boletos_bb_table.py
app/db/repositories/: base.py  base_redis.py  boletos_bb.py  contas_bancarias.py  convenios_bancarios.py  permissions.py  roles.py  tenant_redis.py  tenants.py  token_bb_redis.py  token_redis.py  users.py
app/models/: base.py  user.py
app/schemas/: base.py  enums.py  filter.py  page.py  permission.py  role.py  security.py  sort.py  tenant.py  token.py  token_bb.py  user.py
app/schemas/bancos/: beneficiario_bb.py  boleto.py  boleto_bb.py  boleto_pdf.py  conta_bancaria.py  convenio_bancario.py  pagador_bb.py  qr_code_bb.py
app/services/: __init__.py  authentication.py  authenticator_bb.py  boleto_bb_api.py  boleto_bb_pdf.py  pdf_utils.py  send_email.py
app/templates/email/: forgot-password.html  welcome.html
app/util/: utils.py  utils_bb.py  validators.py
scripts/: hybase-api.conf  hybase.service
static/: README.txt
tests/: conftest.py  test_tenants.py  test_users.py
uploads/profiles/: README.txt
