[tool.poetry]
name = "pay-api"
version = "0.1.0"
license = "MIT"
description = "API for receivables record"
authors = ["Jean Carlos Danese <jean@danese.com.br>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.4"
fastapi-mail = "1.2.5"
user-agents = "^2.2.0"
email-validator = "^1.3.1"
python-multipart = "^0.0.5"
validate-docbr = "^1.10.0"
tldextract = "^3.4.0"
aiofiles = "^22.1.0"
python-dateutil = "^2.8.2"
Pillow = "^9.4.0"
phonenumbers = "^8.13.5"
psycopg2-binary = "^2.9.5"
databases = {extras = ["postgresql"], version = "^0.7.0"}
SQLAlchemy = "^1.4.46"
alembic = "^1.9.2"
PyPika = "^0.48.9"
PyJWT = "^2.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.26.60"
gunicorn = "^20.1.0"
qrcode = "^7.3.1"
aiohttp = "^3.8.3"
reportlab = "^3.6.12"
redis = {extras = ["hiredis"], version = "^4.4.2"}

[tool.poetry.dev-dependencies]
black = "^22.12.0"
debugpy = "^1.6.6"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
asyncio = "^3.4.3"
httpx = "^0.23.3"
asgi-lifespan = "^2.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
