[tool.poetry]
name = "pay-api"
version = "0.1.0"
license = "MIT"
description = "API for receivables record"
authors = ["Jean Carlos Danese <jean@danese.com.br>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^1.10.10"
fastapi-mail = "1.3.1"
user-agents = "^2.2.0"
email-validator = ">=1.1,<2.0"
python-multipart = "^0.0.6"
validate-docbr = "^1.10.0"
tldextract = "^3.4.4"
aiofiles = "^23.1.0"
python-dateutil = "^2.8.2"
Pillow = "^10.0.0"
phonenumbers = "^8.13.15"
psycopg2-binary = "^2.9.6"
databases = {extras = ["postgresql"], version = "^0.7.0"}
SQLAlchemy = "^1.4.48"
alembic = "^1.11.1"
PyPika = "^0.48.9"
PyJWT = "^2.7.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.27.0"
gunicorn = "^20.1.0"
qrcode = "^7.4.2"
aiohttp = "^3.8.4"
reportlab = "^4.0.4"
redis = {extras = ["hiredis"], version = "^4.6.0"}
pypdf = "^3.12.0"
pydantic-i18n = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
debugpy = "^1.6.7"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
asyncio = "^3.4.3"
httpx = "^0.24.1"
asgi-lifespan = "^2.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
